--- a/application.yml
+++ b/application.yml
@@ -5,3 +5,4 @@ eureka:
     instance-info-replication-interval-seconds: 5
     initial-instance-info-replication-interval-seconds: 6
 
+security.basic.enabled: false
